1999-11-02 Elliot Lee <sopwith@redhat.com>
	* src/gdk-pixbuf-loader.[ch], src/gdk-pixbuf-io.h: Make the arguments to the
	write/load_increment operations const-correct.

1999-11-02  Federico Mena Quintero  <federico@redhat.com>

	* src/gnome-canvas-pixbuf.c (gnome_canvas_pixbuf_point):
	Implemented the ::point() method.  We do a simple containment test
	instead of a full distance calculation since the canvas is going
	to change to that scheme, anyways.

1999-11-02 Elliot Lee <sopwith@redhat.com>

	* src/testpixbuf.c: Allow using $TBF_READLEN to specify the size of the chunks
	that are read from the input file.

1999-11-02  Larry Ewing  <lewing@gimp.org>

	* src/gnome-canvas-pixbuf.c (gnome_canvas_pixbuf_render): add aa
	render function.
	(gnome_canvas_pixbuf_class_init): add gnome_canvas_pixbuf_render
	to class.
	
1999-11-02  Federico Mena Quintero  <federico@redhat.com>

	* src/gnome-canvas-pixbuf.c (compute_render_affine): Moved the
	affine computation code from ::draw() to here, since it is needed
	by ::point() as well.

1999-11-02 Elliot Lee <sopwith@redhat.com>

	* src/gdk-pixbuf-loader.c: Reorganize gdk_pixbuf_loader_write into
 	three functions, and eliminate duplication of code from write()
 	and close(). Also fix bug where the 128-byte header was being
 	written twice.

1999-11-01  Federico Mena Quintero  <federico@redhat.com>
	* src/gnome-canvas-pixbuf.c (recompute_bounding_box): Fixed
	bounding box computation.

1999-11-01  Federico Mena Quintero  <federico@redhat.com>

	* src/gnome-canvas-pixbuf.c: Start of the pixbuf canvas item.
	Drawing affines seem to work.  Bounding box is fubared.  ::point()
	is not implemented.  This is a work in progress.

	* src/Makefile.am: Added gnome-canvas-pixbuf.[ch] to the list of
	sources.

	* configure.in: Sigh.  We need to link in libgnomeui for the
	canvas stuff.  This mess will disappear when gdk-pixbuf gets
	folded into gnome-libs.

1999-10-30  Jonathan Blandford  <jrb@redhat.com>
